BugFix-2125 for the Bug 2119: Medication Refill issues Squashed commit of the following
commit cdbed00c 
Author: Serhiy Posokhin <serhiy.posokhin@authoritypartners.com> 
Date: Fri Jun 04 2021 16:53:27 GMT+0300 (Eastern European Summer Time) 

    BugFix-2125 Trigger SonarQube


commit 270195cf 
Author: Serhiy Posokhin <serhiy.posokhin@authoritypartners.com> 
Date: Fri Jun 04 2021 16:36:33 GMT+0300 (Eastern European Summer Time) 

    BugFix-2125 Fixed styles

--- a/src/pages/external-access/request-refill/components/send-us-message.scss
+++ b/src/pages/external-access/request-refill/components/send-us-message.scss
@@ -1,3 +1,6 @@
 .send-message{
     max-width: 46rem;
 }
+.message-link {
+    color: var(--color-primary-900)
+}
